--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,7 +31,7 @@ cmake_minimum_required (VERSION 2.8)
 # set(CMAKE_CONFIGURATION_TYPES "Debug;Release;Profile" CACHE STRING "" FORCE) 
 set(CMAKE_CONFIGURATION_TYPES "Debug;Release" CACHE STRING "" FORCE) 
 
-set (BEHAVIAC_PACKAGE_VERSION 3.6.22)
+set (BEHAVIAC_PACKAGE_VERSION 3.6.23)
 
 #option( BUILD_SHARED_LIBS "set to OFF to build static libraries" ON )
 SET(BUILD_SHARED_LIBS ON CACHE BOOL "set to OFF to build static libraries")
@@ -406,4 +406,5 @@ add_subdirectory ("${PROJECT_SOURCE_DIR}/tutorials/tutorial_1/cpp")
 add_subdirectory ("${PROJECT_SOURCE_DIR}/tutorials/tutorial_1_1/cpp")
 add_subdirectory ("${PROJECT_SOURCE_DIR}/tutorials/tutorial_2/cpp")
 add_subdirectory ("${PROJECT_SOURCE_DIR}/tutorials/tutorial_3/cpp")
+add_subdirectory ("${PROJECT_SOURCE_DIR}/tutorials/tutorial_4/cpp")
 add_subdirectory ("${PROJECT_SOURCE_DIR}/tutorials/tutorial_5/cpp")
